add endpoint for senior librarian adding books, as well as handler and acceptance test
